--- a/contact.html
+++ b/contact.html
@@ -94,6 +94,9 @@
 
 <body>
 
+    <script src="https://apps.elfsight.com/p/platform.js" defer></script>
+    <div class="elfsight-app-46ffeeea-8536-42bc-8a74-2cdd36c46323"></div>
+
     <!-- Contact us -->
     <br><br>
     <div class="about-section">
