--- a/index.html
+++ b/index.html
@@ -12,11 +12,18 @@
     <!-- <link rel="stylesheet" href="style./css/popinfo.css"> -->
 
     <!-- JS, Popper.js, and jQuery -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+        integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
+        crossorigin="anonymous"></script>
     <!-- CSS only -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+        integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/75766025af.js" crossorigin="anonymous"></script>
 
 </head>
@@ -24,12 +31,15 @@
 <a name="top"></a>
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-    <button style="outline: none; border: none;" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation" style="background:none; border:none">
+    <button style="outline: none; border: none;" class="navbar-toggler" type="button" data-toggle="collapse"
+        data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
+        aria-label="Toggle navigation" style="background:none; border:none">
         <span class="navbar-toggler-icon"></span>
     </button>
 
 
-    <a class="navbar-brand " style="padding-left: 4rem; " href="index.html"> <img class="logo " src="./images/logo.jfif " alt="logo " srcset=" ">
+    <a class="navbar-brand " style="padding-left: 4rem; " href="index.html"> <img class="logo "
+            src="./images/logo.jfif " alt="logo " srcset=" ">
     </a>
 
     <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
@@ -51,7 +61,8 @@
             <li style="padding-top: .3rem;">
                 <div style="background-color: #b18b22; border-radius: 4px;">
                     <form class="form-inline ">
-                        <input class="form-control form-control-sm mr-3 w-75" type="text" placeholder="Search" aria-label="Search" style="border-radius: 2px;">
+                        <input class="form-control form-control-sm mr-3 w-75" type="text" placeholder="Search"
+                            aria-label="Search" style="border-radius: 2px;">
                         <i class="fas fa-search fa-1.9x" aria-hidden="true"></i>
                     </form>
                 </div>
@@ -59,7 +70,7 @@
         </ul>
     </div>
     <div class="avtar "><i class="fas fa-caret-down fa-2x "></i>&nbsp;</div>
-    <a href="./auth/login.html" ><i class="fas fa-user-circle fa-2x "></i></a>
+    <a href="./auth/login.html"><i class="fas fa-user-circle fa-2x "></i></a>
 
 </nav>
 
@@ -93,7 +104,7 @@
 <body>
 
     <script src="https://apps.elfsight.com/p/platform.js" defer></script>
-<div class="elfsight-app-46ffeeea-8536-42bc-8a74-2cdd36c46323"></div>
+    <div class="elfsight-app-46ffeeea-8536-42bc-8a74-2cdd36c46323"></div>
 
 
     <!-- pop up info
@@ -116,11 +127,7 @@
         </p>
     </div>
 
-    <a href="https://wa.me/+923174585625?text=Hi%20Eric,%20I%20am%20sending%20you%20this%20message%20because%20I%20am%20interested%20in%20your%20business!" style="text-decoration: none;" target="_blank">
-        <img src="https://i.ibb.co/N9P0K9H/239px-Whats-App-svg.png" width="50" height="50"/>
-   </a>
-   
-   
+
 
     <!------------------------carousel-------------------------------------------------------------->
     <div class="container">
@@ -180,7 +187,17 @@
                     <div class="media-body">
                         <h2 class="mt-0">Project Introduction:</h2>
                         <h4>How it works?</h4>
-                        <p style="text-align: justify;"><i> "Tailor online" is project that break typical tailor attitude and time clashes. At tailor online our first priority is our customer satisfaction. We all know in this modern erra no one have much time and our team realize that so we make this project and take tailor at your door step. Now you can approach tailor by just visit our site make account or if you have no much time for creating acount then go direct order option, enter your details select your design in our collection or give your design what you want to stitch our system assign you time frame and farword your details to our experienced tailors and at given time your dress will at your door step. We are dealing in all format and type of clothes e.g mens women and if you are company and wants to stitch clothes in bulk form feel free to contact with us.<br> "Thank You"</i></p>
+                        <p style="text-align: justify;"><i> "Tailor online" is project that break typical tailor
+                                attitude and time clashes. At tailor online our first priority is our customer
+                                satisfaction. We all know in this modern erra no one have much time and our team realize
+                                that so we make this project and take tailor at your door step. Now you can approach
+                                tailor by just visit our site make account or if you have no much time for creating
+                                acount then go direct order option, enter your details select your design in our
+                                collection or give your design what you want to stitch our system assign you time frame
+                                and farword your details to our experienced tailors and at given time your dress will at
+                                your door step. We are dealing in all format and type of clothes e.g mens women and if
+                                you are company and wants to stitch clothes in bulk form feel free to contact with
+                                us.<br> "Thank You"</i></p>
                     </div>
                 </div>
             </div>
@@ -193,7 +210,9 @@
                     <div class="media-body">
                         <h2 class="mt-0">Sultan Khan</h2>
                         <h4>Executive Cheif (Tailor)</h4>
-                        <p style="text-align: justify;"> <i> "On Tailor online all staff have experienced and competative to work. We ensure high quality stitching and all our task completed in given time."</i> </p>
+                        <p style="text-align: justify;"> <i> "On Tailor online all staff have experienced and
+                                competative to work. We ensure high quality stitching and all our task completed in
+                                given time."</i> </p>
                     </div>
                 </div>
             </div>
@@ -209,7 +228,8 @@
     <div class="our_work ">
 
         <div class="card " style="width: 15rem; height: 20rem;">
-            <img class="card-img-top " style="height: 61%; " src="https://source.unsplash.com/300x250" alt="Card image cap ">
+            <img class="card-img-top " style="height: 61%; " src="https://source.unsplash.com/300x250"
+                alt="Card image cap ">
             <div class="card-body">
                 <p class="card-text cinfo">
                     Gender : Male <br> Colour : define <br> Price : 0.0 Rs <br>
@@ -217,7 +237,8 @@
             </div>
         </div>
         <div class="card " style="width: 15rem; height: 20rem;">
-            <img class="card-img-top " style="height: 61%; " src="https://source.unsplash.com/300x250" alt="Card image cap ">
+            <img class="card-img-top " style="height: 61%; " src="https://source.unsplash.com/300x250"
+                alt="Card image cap ">
             <div class="card-body">
                 <p class="card-text cinfo">
                     Gender : Male <br> Colour : define <br> Price : 0.0 Rs <br>
@@ -225,7 +246,8 @@
             </div>
         </div>
         <div class="card " style="width: 15rem; height: 20rem;">
-            <img class="card-img-top " style="height: 61%; " src="https://source.unsplash.com/300x250" alt="Card image cap ">
+            <img class="card-img-top " style="height: 61%; " src="https://source.unsplash.com/300x250"
+                alt="Card image cap ">
             <div class="card-body">
                 <p class="card-text cinfo">
                     Gender : Male <br> Colour : define <br> Price : 0.0 Rs <br>
@@ -233,7 +255,8 @@
             </div>
         </div>
         <div class="card " style="width: 15rem; height: 20rem;">
-            <img class="card-img-top " style="height: 61%; " src="https://source.unsplash.com/300x250" alt="Card image cap ">
+            <img class="card-img-top " style="height: 61%; " src="https://source.unsplash.com/300x250"
+                alt="Card image cap ">
             <div class="card-body">
                 <p class="card-text cinfo">
                     Gender : Male <br> Colour : define <br> Price : 0.0 Rs <br>
@@ -241,7 +264,8 @@
             </div>
         </div>
         <div class="card " style="width: 15rem; height: 20rem;">
-            <img class="card-img-top " style="height: 61%; " src="https://source.unsplash.com/300x250" alt="Card image cap ">
+            <img class="card-img-top " style="height: 61%; " src="https://source.unsplash.com/300x250"
+                alt="Card image cap ">
             <div class="card-body">
                 <p class="card-text cinfo">
                     Gender : Male <br> Colour : define <br> Price : 0.0 Rs <br>
@@ -249,7 +273,8 @@
             </div>
         </div>
         <div class="card " style="width: 15rem; height: 20rem;">
-            <img class="card-img-top " style="height: 61%; " src="https://source.unsplash.com/300x250" alt="Card image cap ">
+            <img class="card-img-top " style="height: 61%; " src="https://source.unsplash.com/300x250"
+                alt="Card image cap ">
             <div class="card-body">
                 <p class="card-text cinfo">
                     Gender : Male <br> Colour : define <br> Price : 0.0 Rs <br>
@@ -257,7 +282,8 @@
             </div>
         </div>
         <div class="card " style="width: 15rem; height: 20rem;">
-            <img class="card-img-top " style="height: 61%; " src="https://source.unsplash.com/300x250" alt="Card image cap ">
+            <img class="card-img-top " style="height: 61%; " src="https://source.unsplash.com/300x250"
+                alt="Card image cap ">
             <div class="card-body">
                 <p class="card-text cinfo">
                     Gender : Male <br> Colour : define <br> Price : 0.0 Rs <br>
@@ -265,7 +291,8 @@
             </div>
         </div>
         <div class="card " style="width: 15rem; height: 20rem;">
-            <img class="card-img-top " style="height: 61%; " src="https://source.unsplash.com/300x250" alt="Card image cap ">
+            <img class="card-img-top " style="height: 61%; " src="https://source.unsplash.com/300x250"
+                alt="Card image cap ">
             <div class="card-body">
                 <p class="card-text cinfo">
                     Gender : Male <br> Colour : define <br> Price : 0.0 Rs <br>
@@ -295,10 +322,12 @@
     <div class="row container-fluid" style="padding-top: 2rem;">
         <div class="col-lg-4 col-md-4 col-sm-6" style="padding: 1rem;">
             <label style="font-weight: 500; font-size: 18px;">General Information and Help</label><br>
-            <a href="mailto:taimoor98.th@gmail.com?subject=Hi Taimoor message from tailor website." target="blank" style="font-size: 16px;">
+            <a href="mailto:taimoor98.th@gmail.com?subject=Hi Taimoor message from tailor website." target="blank"
+                style="font-size: 16px;">
                 <i class="fas fa-at fa-1.9x"></i>&nbsp; Contact - Taimoor
             </a><br>
-            <a href="mailto:awaisikram788@gmail.com?subject=Hi Awais message from tailor website." target="blank" style="font-size: 16px;">
+            <a href="mailto:awaisikram788@gmail.com?subject=Hi Awais message from tailor website." target="blank"
+                style="font-size: 16px;">
                 <i class="fas fa-at fa-1.9x"></i>&nbsp; Contact - Awais
             </a>
         </div>
@@ -312,8 +341,10 @@
 
         <br><br><br>
         <div class="col-lg-4 col-md-4 col-sm-12" style="padding: 1rem;">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5029.414381286717!2d74.40751999999996!3d31.547018299999984!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39190f8aa6801965%3A0xd4b98ebf429d2311!2sAl-Faisal%20Town%2C%20Lahore%2C%20Punjab%2C%20Pakistan!5e1!3m2!1sen!2s!4v1604678886811!5m2!1sen!2s"
-                width="300" height="150" frameborder="0" style="border:0; border-radius: .3rem; padding: .1rem;" allowfullscreen="" aria-hidden=" false" tabindex="0"></iframe>
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5029.414381286717!2d74.40751999999996!3d31.547018299999984!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39190f8aa6801965%3A0xd4b98ebf429d2311!2sAl-Faisal%20Town%2C%20Lahore%2C%20Punjab%2C%20Pakistan!5e1!3m2!1sen!2s!4v1604678886811!5m2!1sen!2s"
+                width="300" height="150" frameborder="0" style="border:0; border-radius: .3rem; padding: .1rem;"
+                allowfullscreen="" aria-hidden=" false" tabindex="0"></iframe>
 
         </div>
     </div>
