--- a/auth/login.html
+++ b/auth/login.html
@@ -55,6 +55,31 @@
 			
 		</div>
 
+		<!-- The core Firebase JS SDK is always required and must be listed first -->
+<script src="https://www.gstatic.com/firebasejs/8.0.1/firebase-app.js"></script>
+
+<!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+<script src="https://www.gstatic.com/firebasejs/8.0.1/firebase-analytics.js"></script>
+
+<script>
+  // Your web app's Firebase configuration
+  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+  var firebaseConfig = {
+    apiKey: "AIzaSyDhA_28heFEvbWCFHK9JoFJ-saRw1N1dv4",
+    authDomain: "tailoronline-fb1c9.firebaseapp.com",
+    databaseURL: "https://tailoronline-fb1c9.firebaseio.com",
+    projectId: "tailoronline-fb1c9",
+    storageBucket: "tailoronline-fb1c9.appspot.com",
+    messagingSenderId: "132245891690",
+    appId: "1:132245891690:web:5df8604d753bee9312f813",
+    measurementId: "G-99KB09ZNYM"
+  };
+  // Initialize Firebase
+  firebase.initializeApp(firebaseConfig);
+  firebase.analytics();
+</script>
+
 
 		<!-- jQuery and Bootstrap JS -->
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
