--- a/auth/logind.html
+++ b/auth/logind.html
@@ -1,72 +1,84 @@
 <!DOCTYPE html>
 <html>
-
-<head>
+  <head>
     <meta charset="UTF-8">
     <title>Sample FirebaseUI App</title>
-    <!-- *******************************************************************************************
-       * TODO(DEVELOPER): Paste the initialization snippet from:
-       * Firebase Console > Overview > Add Firebase to your web app. *
-       ***************************************************************************************** -->
-
-    <script src="https://www.gstatic.com/firebasejs/ui/4.7.1/firebase-ui-auth.js"></script>
-    <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/4.7.1/firebase-ui-auth.css" />
-    <script type="text/javascript">
-        // FirebaseUI config.
-        var uiConfig = {
-            signInSuccessUrl: '<url-to-redirect-to-on-success>',
-            signInOptions: [
-                // Leave the lines as is for the providers you want to offer your users.
-                firebase.auth.GoogleAuthProvider.PROVIDER_ID,
-                firebase.auth.EmailAuthProvider.PROVIDER_ID,
-
-            ],
-            // tosUrl and privacyPolicyUrl accept either url string or a callback
-            // function.
-            // Terms of service url/callback.
-            tosUrl: '<your-tos-url>',
-            // Privacy policy url/callback.
-            privacyPolicyUrl: function () {
-                window.location.assign('<your-privacy-policy-url>');
-            }
-        };
-
-        // Initialize the FirebaseUI Widget using Firebase.
-        var ui = new firebaseui.auth.AuthUI(firebase.auth());
-        // The start method will wait until the DOM is loaded.
-        ui.start('#firebaseui-auth-container', uiConfig);
-    </script>
-</head>
-
-<body>
+  </head>
+  <body>
     <!-- The surrounding HTML is left untouched by FirebaseUI.
          Your app may use that space for branding, controls and other customizations.-->
     <h1>Welcome to My Awesome App</h1>
     <div id="firebaseui-auth-container"></div>
-</body>
-<!-- The core Firebase JS SDK is always required and must be listed first -->
-<script src="https://www.gstatic.com/firebasejs/8.0.1/firebase-app.js"></script>
 
-<!-- TODO: Add SDKs for Firebase products that you want to use
-     https://firebase.google.com/docs/web/setup#available-libraries -->
-<script src="https://www.gstatic.com/firebasejs/8.0.1/firebase-analytics.js"></script>
 
-<script>
-    // Your web app's Firebase configuration
-    // For Firebase JS SDK v7.20.0 and later, measurementId is optional
-    var firebaseConfig = {
-        apiKey: "AIzaSyDm7H8dBk-r4uSWx8_g0uKoGBH5p8BE8c8",
-        authDomain: "tailoronline-155ac.firebaseapp.com",
-        databaseURL: "https://tailoronline-155ac.firebaseio.com",
-        projectId: "tailoronline-155ac",
-        storageBucket: "tailoronline-155ac.appspot.com",
-        messagingSenderId: "314736136565",
-        appId: "1:314736136565:web:42698ecf73c712ea2f433c",
-        measurementId: "G-BPQWLXYJ91"
-    };
-    // Initialize Firebase
-    firebase.initializeApp(firebaseConfig);
-    firebase.analytics();
-</script>
 
+    <!-- *******************************************************************************************
+       * TODO(DEVELOPER): Paste the initialization snippet from:
+       * Firebase Console > Overview > Add Firebase to your web app. *
+       ***************************************************************************************** -->
+       <script src="https://www.gstatic.com/firebasejs/ui/4.7.1/firebase-ui-auth.js"></script>
+       <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/4.7.1/firebase-ui-auth.css" />
+       <script type="text/javascript">
+         // FirebaseUI config.
+         var uiConfig = {
+           signInSuccessUrl: '../index.html',
+           signInOptions: [
+             // Leave the lines as is for the providers you want to offer your users.
+             firebase.auth.GoogleAuthProvider.PROVIDER_ID,
+             // firebase.auth.FacebookAuthProvider.PROVIDER_ID,
+             // firebase.auth.TwitterAuthProvider.PROVIDER_ID,
+             // firebase.auth.GithubAuthProvider.PROVIDER_ID,
+             // firebase.auth.EmailAuthProvider.PROVIDER_ID,
+             // firebase.auth.PhoneAuthProvider.PROVIDER_ID,
+             // firebaseui.auth.AnonymousAuthProvider.PROVIDER_ID
+           ],
+           // tosUrl and privacyPolicyUrl accept either url string or a callback
+           // function.
+           // Terms of service url/callback.
+           // tosUrl: '<your-tos-url>',
+           // // Privacy policy url/callback.
+           // privacyPolicyUrl: function() {
+           //   window.location.assign('<your-privacy-policy-url>');
+           // }
+         };
+   
+         // Initialize the FirebaseUI Widget using Firebase.
+         var ui = new firebaseui.auth.AuthUI(firebase.auth());
+         // The start method will wait until the DOM is loaded.
+         ui.start('#firebaseui-auth-container', uiConfig);
+       </script>
+   
+
+
+
+    	<!-- FIREBASE START -->
+
+	<!-- The core Firebase JS SDK is always required and must be listed first -->
+	<script src="https://www.gstatic.com/firebasejs/8.0.1/firebase.js"></script>
+
+	<!-- TODO: Add SDKs for Firebase products that you want to use
+	  https://firebase.google.com/docs/web/setup#available-libraries -->
+
+	<script>
+		// Your web app's Firebase configuration
+		var firebaseConfig = {
+			apiKey: "AIzaSyDY26AV-Q8dk2MhG-fkwtv0EUm9fLryFiE",
+			authDomain: "tailoronline-dc888.firebaseapp.com",
+			databaseURL: "https://tailoronline-dc888.firebaseio.com",
+			projectId: "tailoronline-dc888",
+			storageBucket: "tailoronline-dc888.appspot.com",
+			messagingSenderId: "32025404906",
+			appId: "1:32025404906:web:66f3781e36e05301833e93"
+		};
+		// Initialize Firebase
+		firebase.initializeApp(firebaseConfig);
+	</script>
+
+  <!-- FIREBASE END -->
+
+  <script src="./googlelogin.js" type="text/javascript"></script>
+
+  
+
+  </body>
 </html>
